Add CTA with PDF link to Impact page
Also fix ampersand in value sent to Salesforce for Anatomy & Physiology

--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -63,7 +63,7 @@
             <span>Book Requested</span>
             <select name="00NU00000053nzR" required />
                 <option value="" disabled selected>Please Select</option>
-                <option value="Anatomy &amp; Physiology">Anatomy and Physiology</option>
+                <option value="Anatomy & Physiology">Anatomy and Physiology</option>
                 <option value="Biology">Biology</option>
                 <option value="Chemistry">Chemistry</option>
                 <option value="College Physics (Algebra)">College Physics</option>
