--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -24,12 +24,20 @@
         <div id="affiliates" class="affiliates">
             <div class="text-content">
                 <h2>Institutional Partner and Affiliate Schools</h2>
-
                 <p>
                     Our institutional partner and affiliate schools are forging institutional
                     initiatives to encourage adoptions of OpenStax and other open resources
                     to give students access to the learning materials they need to succeed.
                 </p>
+                <div class="cta">
+                    Interested in driving student success on your campus with open resources?
+                    Access our Institutional Partnership Program application to learn more.
+                    Applications are due June 15, and the program begins July 15.
+                    <br />
+                    <a class="btn" href="https://d3bxy9euw4e147.cloudfront.net/oscms-prodcms/media/documents/Institutional_Partnership_Program_Application.pdf">
+                        Get the application
+                    </a>
+                </div>
             </div>
 
             <ul class="partners no-bullets">
