Change URL to website

--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -57,7 +57,7 @@
             <div class="col">
                 <label>
                     College website URL
-                    <input name="URL" type="text" required />
+                    <input name="website" type="text" required />
                 </label>
                 <label>
                     Official institutional email address
