--- a/src/app/pages/details/resource/resource.hbs
+++ b/src/app/pages/details/resource/resource.hbs
@@ -1,2 +1,3 @@
 <h4>{{resource_heading}}</h4>
 <a href="{{link_document_url}}">{{link_text}}</a>
+{{#if showLock}}<i class="locked-state fa {{showLock}}"></i>{{/if}}
