--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -141,8 +141,8 @@
 
             blockquote {
                 color: white;
-                font-size: 1.8rem;
-                line-height: 2.6rem;
+                font-size: 2.4rem;
+                line-height: 2;
                 font-weight: 400;
             }
 
@@ -182,11 +182,12 @@
 
         blockquote {
             display: block;
-            line-height: 2.4rem;
+            line-height: 2;
             margin: 1rem 0;
 
             cite {
-                font-weight: bold;
+                font-size: 1.8rem;
+                font-weight: 300;
             }
         }
 
