change history to humanities in book subjects and partners

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -45,7 +45,7 @@
                         <li role="presentation"><a href="/subjects/math" role="menuitem" tabindex="-1">Math</a></li>
                         <li role="presentation"><a href="/subjects/science" role="menuitem" tabindex="-1">Science</a></li>
                         <li role="presentation"><a href="/subjects/social-sciences" role="menuitem" tabindex="-1">Social Sciences</a></li>
-                        <li role="presentation"><a href="/subjects/history" role="menuitem" tabindex="-1">History</a></li>
+                        <li role="presentation"><a href="/subjects/humanities" role="menuitem" tabindex="-1">Humanities</a></li>
                         <li role="presentation"><a href="/subjects/ap" role="menuitem" tabindex="-1">AP<sup>&reg;</sup></a></li>
                     </ul>
                 </li>
