Standardize max width to 1200
Remove left/right padding on entities when viewport is 1200+ wide.

--- a/src/app/components/buckets/buckets.scss
+++ b/src/app/components/buckets/buckets.scss
@@ -8,6 +8,11 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
 
+    @include designwidth {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
     .bucket {
         color: color(neutral-lightest);
         max-width: 100%;
