--- a/src/app/pages/subjects/subjects.hbs
+++ b/src/app/pages/subjects/subjects.hbs
@@ -6,7 +6,7 @@
         <div class="filter">
             <div class="filter-buttons"></div>
         </div>
-        <div class="container"></div>
+        <div class="container row-container"></div>
         <div class="feature-block">
             <div class="container">
                 <h2>About Our Textbooks</h2>
