--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -14,6 +14,11 @@
         padding: 8rem 1.5rem;
     }
 
+    @include designwidth {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
     .quote-bucket {
         align-items: stretch;
         background-color: color(neutral-lightest);
