--- a/src/app/components/get-this-title/print-submenu/print-submenu.hbs
+++ b/src/app/components/get-this-title/print-submenu/print-submenu.hbs
@@ -3,5 +3,5 @@
 <p>Bookstores place orders through NACSORP.  Need an account?</p>
 {{#if amazon.link}}
 <a href="{{amazon.link}}" class="btn">Individual Orders</a>
-<p>Available for ${{amazon.price}} from seller "OpenStax College" on Amazon</p>
+<p>Available for ${{amazon.price}} from seller "OpenStax" on Amazon</p>
 {{/if}}
