--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -1,17 +1,18 @@
 @import 'variables';
 @import 'mixins';
 
+$phone-up: #{breakpoints(phone) + 1};
+
 .quotes {
     align-items: stretch;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 1.5rem;
-    max-width: $boxed-width;
+    justify-content: space-between;
     margin: 0 auto;
+    padding: 1.5rem 0;
 
     @include desktop {
-        padding: 8rem 1.5rem;
+        padding: 8rem 0;
     }
 
     .quote-bucket {
@@ -19,11 +20,19 @@
         background-color: color(neutral-lightest);
         display: flex;
         flex-flow: column nowrap;
-        flex: 1 1 auto;
-        margin: 0 0 1.5rem;
+        flex: 0 0 100%;
         min-height: 20rem;
+        margin-bottom: 1.5rem;
 
-        @media (min-width: 500px) {
+        @include desktop {
+            margin-bottom: 0;
+        }
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        @media (min-width: $phone-up) {
             flex-flow: row wrap;
 
             div:first-child:nth-last-child(2),
@@ -32,15 +41,8 @@
             }
         }
 
-
-        @media (min-width: 800px) {
-            flex: 1 1 45%;
-            flex-flow: row wrap;
-            margin: 0;
-
-            &:first-child {
-                margin-right: 1.5rem;
-            }
+        @media (min-width: $boxed-width) {
+            flex-basis: 57rem;
         }
 
         > .quote {
@@ -79,27 +81,18 @@
 
         &.right {
 
-            @media (min-width: 800px) {
-                flex: 1 1 60%;
-            }
-
-            @media (min-width: 1000px) {
-                flex: 1 1 45%;
+            @include desktop {
+                flex-basis: calc(13.125rem + 37.5%);
             }
 
             .image {
                 order: 1;
                 background-image: url('/images/home/quotes/quote-right.jpg');
                 background-position: 62%;
-
-
-
             }
 
             > .quote {
                 order: 2;
-
-
 
                 &::before {
                     @include triangle(
@@ -109,7 +102,7 @@
                         $size: 2.4rem
                     );
 
-                    @media (min-width: 500px) {
+                    @media (min-width: $phone-up) {
                         @include triangle(
                             $direction: left,
                             $position: top 50% left -4.4rem,
@@ -122,33 +115,29 @@
         }
 
         &.full {
-            align-items: center;
             background-color: color(orange);
-            margin: 0;
-            min-height: 0;
+            color: color(neutral-lightest);
+            font-weight: 400;
 
-            @media (min-width: 800px) {
-                flex: 1 1 35%;
-            }
-
-            @media (min-width: 1000px) {
-                flex: 1 1 45%;
-            }
-
-            .quote {
-                padding: 2rem 3rem;
+            @include desktop {
+                flex-basis: calc(58.75% - 11.7375rem);
             }
 
             blockquote {
-                color: white;
-                font-size: 2.4rem;
-                line-height: 2;
-                font-weight: 400;
-            }
+                @include constrained-variable-text(2.2, 0.2);
 
-            .btn {
-                background-color: color(neutral-lightest);
-                color: color(orange);
+                p {
+                    margin: -0.6rem 0 0;
+                    padding: 0 4rem 2rem 1rem;
+                    text-indent: -1rem;
+                }
+
+                .attribution {
+                    @include constrained-variable-text(1.8, 0.2);
+
+                    font-weight: 300;
+                    line-height: 1.3;
+                }
             }
         }
     }
@@ -161,7 +150,7 @@
         width: 100%;
         height: 20rem;
 
-        @media (min-width: 500px) {
+        @media (min-width: $phone-up) {
             flex: 1 1 50%;
             width: auto;
             height: auto;
@@ -176,26 +165,21 @@
         flex-flow: column nowrap;
         justify-content: space-between;
 
-        @media (min-width: 500px) {
+        @media (min-width: $phone-up) {
             flex: 1 1 50%;
         }
 
         blockquote {
             display: block;
-            line-height: 2;
+            line-height: 1.7;
             margin: 1rem 0;
-
-            cite {
-                font-size: 1.8rem;
-                font-weight: 300;
-            }
         }
 
         .btn {
             margin-top: 1.5rem;
             width: 100%;
 
-            @media (min-width: 500px) {
+            @media (min-width: $phone-up) {
                 width: auto;
             }
 
