--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -3,24 +3,24 @@
         <div class="hero w-cards">
             <div class="container-wrap">
                 <div class="student"></div>
-                <div class="overlay">
-                    <div class="text-block">
-                        <h1 class="header">Free textbooks.<br> High quality.<br> No catch.</h1>
-                        <p class="blurb">
-                            Some of the most valuable investments don't have a price tag.
-                            Neither do our textbooks. Our free, high-quality textbooks and
-                            learning technology give students the tools they need to
-                            succeed without having to weigh the cost.
-                        </p>
+                    <div class="overlay">
+                        <div class="text-block">
+                            <h1 class="header">Free textbooks.<br> High quality.<br> No catch.</h1>
+                            <p class="blurb">
+                                Some of the most valuable investments don't have a price tag.
+                                Neither do our textbooks. Our free, high-quality textbooks and
+                                learning technology give students the tools they need to
+                                succeed without having to weigh the cost.
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
             <div class="square-1"></div>
             <div class="square-2"></div>
         </div>
         <span class="scrolldown-chevron"><a href="#getting-started"><i class="fa fa-chevron-down"></i></a></span>
         <div id="getting-started" class="getting-started">
-            <div class="container">
+            <div class="container boxed">
                 <div class="header">Getting Started</div>
                 <ol class="steps">
                     <li class="numbered step">
