--- a/src/styles/components/bucket.scss
+++ b/src/styles/components/bucket.scss
@@ -77,8 +77,10 @@
 
             display: block;
             font-weight: 700;
+            letter-spacing: -0.02em; // Because font scales
             line-height: 1;
             margin-bottom: 1.2rem;
+            max-width: 100%;
         }
 
         .blurb {
