Stop using query string on details page
Was accepting details/subject or details?subject
This made email links they want to use not workable

--- a/src/app/pages/home/banners/us-history/us-history.hbs
+++ b/src/app/pages/home/banners/us-history/us-history.hbs
@@ -20,7 +20,7 @@
         <div class="subject-links flyout">
             <ul>
                 <li>
-                    <a class="btn btn-large btn-orange explore-subject" href="/details?us-history">
+                    <a class="btn btn-large btn-orange explore-subject" href="/details/us-history">
                         Explore U.S. History
                     </a>
                 </li>
