--- a/src/app/pages/about-us/about-us.scss
+++ b/src/app/pages/about-us/about-us.scss
@@ -280,11 +280,11 @@
             padding: 3rem 0;
             margin-top: 3rem;
             opacity: 1;
-            width: calc(100vw - 4rem);
+            width: calc(100vw - 3rem);
             overflow: visible;
             position: absolute;
             bottom: auto;
-            left: -113%;
+            left: -109%;
             top: 18rem;
             right: auto;
             display: flex;
@@ -488,48 +488,26 @@
 
     .strategic-advisors {
         .headshot {
-            flex: 0 0 49%;
+            flex: 0 0 100%;
 
-            @media (max-width: 400px) {
-                flex: 0 0 100%;
-            }
-
-            @include phone {
-                width: 50%;
+            @media (min-width: 400px) {
+                flex-basis: 48%;
             }
 
             @include tablet {
-                flex: 0 0 30%;
-                margin-right: 1rem;
+                flex-basis: 31.5%;
             }
 
             @include desktop {
-                width: 17.5rem;
-                flex: 0 0 auto;
+                flex-basis: 23.5%;
             }
 
-            &:nth-child(odd) {
-                .picture-area {
-                    @include phone {
-                        margin-right: 1.25rem;
-                    }
-
-                    @media (max-width: 400px) {
-                        margin-right: 0;
-                    }
-                }
+            @media (min-width: 955px) {
+                flex-basis: 18.5%;
             }
 
-            &:nth-child(even) {
-                .picture-area {
-                    @include phone {
-                        margin-left: 1.25rem;
-                    }
-
-                    @media (max-width: 400px) {
-                        margin-left: 0;
-                    }
-                }
+            @media (min-width: 1140px) {
+                flex-basis: 15%;
             }
 
             .remover {
@@ -595,7 +573,7 @@
     .strategic-advisors .headshot.tapped .details {
         @include tablet {
             top: auto;
-            bottom: 26rem;
+            bottom: 100%;
 
             &::before {
                 border-color: color(neutral-lightest) transparent transparent;
