Handle top-of-page and senior author status independently
On Details page, both at the top and the bottom, senior authors and
non-senior authors should be listed separately.

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -18,12 +18,18 @@
                 </div>
                 <p class="blurb"></p>
                 <div>
-                    <h2>Senior Contributing Authors</h2>
-                    <div id="top-authors"></div>
+                    <div id="senior-top-authors">
+                        <h2>Senior Contributing Authors</h2>
+                        <div data-id="senior-top-authors"></div>
+                    </div>
+                    <div id="top-authors">
+                        <h2> Contributing Authors</h2>
+                        <div data-id="top-authors"></div>
+                    </div>
                     <div class="links">
                         <a class="go-to" href="#details">See all authors</a>
+                    </div>
                 </div>
-            </div>
             </section>
             <section class="floating-menu">
                 <div class="box">
@@ -99,7 +105,14 @@
         <div class="container">
         <h2>Details</h2>
         <h3>Authors</h3>
-        <div id="all-authors"></div>
+        <div id="senior-all-authors">
+            <h4>Senior Contributing Authors</h4>
+            <div data-id="senior-all-authors"></div>
+        </div>
+        <div id="nonsenior-all-authors">
+            <h4> Contributing Authors</h4>
+            <div data-id="nonsenior-all-authors"></div>
+        </div>
         <table class="publish-info">
             <tbody>
                 <tr>
