Fix margin on Get The Application button

--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -165,6 +165,7 @@ $hero-break-width: 880px;
     .cta .btn {
         color: color(neutral-lightest);
         font-size: 110%;
+        margin-top: 3.5rem;
     }
 
     .affiliates {
