Fix adoption status values for SalesForce
Denver provided corrected values

--- a/src/app/pages/renewal/renewal.hbs
+++ b/src/app/pages/renewal/renewal.hbs
@@ -72,8 +72,8 @@
             <label>How are you using this book?
                 <select name="00NU00000055spw">
                     <option value="None" disabled selected></option>
-                    <option value="Fully adopted">Fully adopted and using it as our main text.</option>
-                    <option value="Recommending book as an option">Recommending the book as an option. The students purchase a different book.</option>
+                    <option value="Confirmed Adoption Won">Fully adopted and using it as our main text.</option>
+                    <option value="Confirmed Will Recommend">Recommending the book as an option. The students purchase a different book.</option>
                 </select>
             </label>
 
