Fix flex-column layout glitches on Higher Ed

--- a/src/app/components/products-boxes/products-boxes.scss
+++ b/src/app/components/products-boxes/products-boxes.scss
@@ -37,6 +37,7 @@
             @include collapsed {
                 flex: 1 1 auto;
                 margin: 0 0 3rem;
+                padding: 0 1.5rem;
 
                 &.cnx {
                     margin-bottom: 0;
