Ask "Are you already using the book"
Make central book list object, separating published from coming-soon
books
Use list in adoption, interest, faculty-verification, and
finish-profile (faculty section)
Make central list object of acceptable answers to “how are you using
this book”
Add that question to faculty-verification and finish-profile

--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -83,6 +83,11 @@
                         {{/each}}
                     </select>
                 </label>
+                <label>
+                    <span>How are you using this book?</span>
+                    <select name="00NU00000055spw">
+                    </select>
+                </label>
                 <div class="cta">
                     <input type="submit" value="Submit" role="button" class="btn"/>
                 </div>
