--- a/src/app/pages/finish-profile/faculty-section/faculty-section.hbs
+++ b/src/app/pages/finish-profile/faculty-section/faculty-section.hbs
@@ -15,6 +15,11 @@
             <span>Number of students you teach per semester</span>
             <input name="00NU00000052VId" type="number" min=0 required />
         </label>
+        <label>
+            <span>Are you using the title(s) listed above?</span>
+            <select name="00NU00000055spw">
+            </select>
+        </label>
         <label class="form-hidden">
             <span>Not required</span>
             <input type="number" min=0 />
