Update "Are you an adopter" text
Add qtext member to salesforce answers, to answer “Are you already
using” vs “How are you using”
Reword question on Faculty Verification and Finish Profile
Use qtext answers on Faculty Verification and Finish Profile
Fix Finish Profile update hidden field when checkbox changes
programmatically

--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -84,7 +84,7 @@
                     </select>
                 </label>
                 <label>
-                    <span>How are you using this book?</span>
+                    <span>Are you already using OpenStax in your courses?</span>
                     <select name="00NU00000055spw">
                     </select>
                 </label>
