--- a/src/app/pages/finish-profile/faculty-section/faculty-section.hbs
+++ b/src/app/pages/finish-profile/faculty-section/faculty-section.hbs
@@ -16,7 +16,7 @@
             <input name="00NU00000052VId" type="number" min=0 required />
         </label>
         <label>
-            <span>Are you using the title(s) listed above?</span>
+            <span>Are you already using OpenStax in your courses?</span>
             <select name="00NU00000055spw">
             </select>
         </label>
