Replace student toolkit background image on details page

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -403,7 +403,7 @@
             background-color: color(gold);
             background-image: url('/images/details/student-resources-bg-lg.jpg');
             background-repeat: no-repeat;
-            background-position: right 70%;
+            background-position: left 70%;
             background-size: cover;
             transition: All ease-in-out 0.3s;
 
