--- a/src/app/pages/home/banners/chemistry/chemistry.hbs
+++ b/src/app/pages/home/banners/chemistry/chemistry.hbs
@@ -1,29 +1,31 @@
 <div class="chemistry">
-    <div class="element"></div>
-    <div class="book"></div>
-    <div class="video-banner"></div>
-    <div class="square-1"></div>
-    <div class="square-2"></div>
-    <div class="square-3"></div>
-    <div class="square-4"></div>
+    <div class="container">
+        <div class="element flyout"></div>
+        <div class="book flyout"></div>
+        <div class="student"></div>
+        <div class="square-1 flyout"></div>
+        <div class="square-2 flyout"></div>
+        <div class="square-3 flyout"></div>
+        <div class="square-4 flyout"></div>
 
-    <div class="now-i-can">
-        <span>Now I can</span>
-        <span class="quote">Mix it up</span>
-    </div>
+        <div class="now-i-can flyout">
+            <span>Now I can</span>
+            <span class="quote">transform</span>
+        </div>
 
-    <div class="subject-links">
-        <ul>
-            <li>
-                <a class="btn btn-large btn-orange explore-subject" href="/books/chemistry">
-                    Explore Chemistry
-                </a>
-            </li>
-            <li>
-                <a class="btn btn-large btn-turquoise explore-all" href="/subjects">
-                    Explore All Subjects
-                </a>
-            </li>
-        </ul>
+        <div class="subject-links flyout">
+            <ul>
+                <li>
+                    <a class="btn btn-large btn-orange explore-subject" href="/details/chemistry">
+                        Explore Chemistry
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-large btn-turquoise explore-all" href="/subjects">
+                        Explore All Subjects
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
