--- a/src/app/pages/home/banners/chemistry/chemistry.scss
+++ b/src/app/pages/home/banners/chemistry/chemistry.scss
@@ -1,236 +1,383 @@
 @import 'variables';
 @import 'mixins';
 
+@mixin tablet {
+    @media (min-width: #{breakpoints(phone) + 1}) {
+        @content;
+    }
+}
+
 @mixin desktop {
     @media (min-width: 1025px) {
         @content;
     }
 }
 
-@mixin tablet {
-    @media (min-width: #{breakpoints(phone) + 1}) and (max-width: 1024px) {
-        @content;
+.flyin,
+.flyout {
+    @include desktop {
+        opacity: 0;
     }
 }
 
 .chemistry {
     background-image: url('/images/home/subjects/chemistry/background.jpg');
-    background-position: center top;
+    background-attachment: fixed;
+    background-position: 20% 0;
     background-repeat: no-repeat;
-    background-size: 100vw 55.695vw;
-    height: 55.695vw;
-    margin-top: -8rem;
+    background-size: cover;
+    height: 60rem;
     overflow: hidden;
-    padding-top: 8rem;
     position: relative;
 
-    @include tablet {
-        background-size: 100vw 81.4vw;
-        height: 81.4vw;
+    @media (min-width: #{breakpoints(tablet) + 1}) {
+        height: 65rem;
+    }
+
+    @include phone {
+        background-color: color(orange);
+        background-image: none;
+        height: 45rem;
+    }
+
+    .container {
+        display: flex;
+        margin: 0 auto;
+        padding: 0 1.5rem;
+        max-width: $boxed-width;
+        flex-flow: column wrap;
+        position: relative;
+        height: 100%;
+
+        @include tablet {
+            flex-flow: row wrap;
+        }
+
+        @include desktop {
+            flex-flow: row wrap;
+        }
     }
 
     .square-1,
     .square-2,
     .square-3,
     .square-4 {
-        background-color: rgba(color(orange), 0.2);
+        background-color: rgba(color(orange), 0.1);
         display: none;
         position: absolute;
+        transform: translateZ(0);
         z-index: 0;
 
         @include desktop {
             display: block;
+            animation: flyin 0.5s 1.2s 1 normal ease-in forwards, loop 30s 1.5s normal infinite linear forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
+    .square-1,
+    .square-4 {
+        height: 2.5rem;
+        width: 2.5rem;
+    }
+
     .square-1 {
-        height: 3.62vw;
-        left: 12vw;
-        top: 23.77vw;
-        width: 3.62vw;
+        left: 5rem;
+        top: 50%;
     }
 
     .square-2 {
-        height: 16.67vw;
-        left: 20.07vw;
-        top: 25.14vw;
-        width: 27.25vw;
+        height: 34rem;
+        bottom: 0;
+        left: 0;
+        width: 45rem;
+
+        @include tablet {
+            display: block;
+        }
+
+        @include desktop {
+            width: 60%;
+            height: 34rem;
+            bottom: auto;
+            top: 27%;
+        }
     }
 
     .square-3 {
-        height: 25.8vw;
-        left: 62.75vw;
-        top: 10.87vw;
-        width: 25.8vw;
+        height: 26rem;
+        bottom: 15rem;
+        right: 0;
+        width: 26rem;
+
+        @include tablet {
+            display: block;
+        }
+
+        @include desktop {
+            right: 5rem;
+            bottom: 5rem;
+            width: 40rem;
+            height: 33rem;
+        }
     }
 
     .square-4 {
-        height: 1.5vw;
-        left: 81.67vw;
-        top: 13.62vw;
-        width: 1.5vw;
+        left: 70%;
+        top: 20%;
     }
 
     .element,
     .book,
-    .video-banner {
+    .student {
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
+        transform: translateZ(0);
         z-index: 1;
     }
 
     .element {
-        background-image: url('/images/home/subjects/chemistry/element.png');
         display: none;
-        height: 8.57vw;
-        left: 25.286vw;
+        background-image: url('/images/home/subjects/chemistry/element.png');
+        height: 12rem;
+        right: 0;
         position: absolute;
-        top: 17.857vw;
-        width: 7.21vw;
+        bottom: 10rem;
+        width: 12rem;
 
         @include desktop {
             display: block;
+            animation: flyin 0.5s 1.4s 1 normal ease-in forwards, loop 40s 1.8s reverse infinite linear forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
     .book {
         background-color: color(orange);
         background-image: url('/images/subjects/chemistry.svg');
-        background-position: bottom center;
-        height: 25.607vw;
-        left: 38.12vw;
+        background-position: 0 0%;
         position: absolute;
-        top: 7.726vw;
-        width: 25.607vw;
+        height: 25rem;
+        left: 0;
+        top: 1.5rem;
+        width: 25rem;
 
         @include tablet {
-            height: 36.46vw;
-            left: 25.32vw;
-            top: 18.35vw;
-            width: 36.46vw;
+            background-position: 0 100%;
+            top: 5%;
+            left: auto;
+            right: 40%;
+            width: 30rem;
+            height: 30rem;
+        }
+
+        @media (max-width: 380px) {
+            width: 20rem;
+            height: 20rem;
+        }
+
+        @media (min-width: #{breakpoints(tablet) + 1}) {
+            top: 15%;
+            right: 35%;
+        }
+
+        @include desktop {
+            right: 45%;
+            animation: flyin 0.5s 1s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
-    .video-banner {
+    .student {
         background-image: url('/images/home/subjects/chemistry/student.png');
-        height: 33.7vw;
-        left: 37vw;
+        background-position: 92% 100%;
+        bottom: 15rem;
+        height: 25rem;
         position: absolute;
-        top: 22vw;
-        width: 54.64vw;
+        right: 2.5rem;
+        width: 22rem;
         z-index: 2;
 
         @include tablet {
-            height: 49.5vw;
-            left: 24.68vw;
-            top: 32vw;
-            width: 80.26vw;
+            bottom: 0;
+            right: -6rem;
+            height: 53rem;
+            width: 44.4rem;
+        }
+
+        @media (min-width: 700px) {
+            right: 0;
+        }
+
+        @include desktop {
+            bottom: 0;
+            right: 20rem;
         }
     }
 
     .now-i-can {
-        background-color: rgba(color(neutral-medium), 0.85);
+        background-color: rgba(color(gray), 0.85);
+        bottom: 15rem;
         color: color(neutral-lightest);
-        font-size: 2.4vw;
+        display: none;
+        font-size: 3.6rem;
         font-weight: 600;
-        height: 7.064vw;
-        left: 12.8vw;
-        line-height: 7.064vw;
+        height: 9rem;
+        line-height: 2.5rem;
+        left: 1.5rem;
         padding: 0;
         position: absolute;
         text-align: center;
         text-transform: none;
-        top: 33.8484vw;
-        width: 28.6vw;
+        width: 45rem;
         z-index: 3;
 
-        @include tablet {
-            font-size: 3.8vw;
-            left: 3.29vw;
-            line-height: 10.76vw;
-            height: 10.76vw;
-            top: 55.82vw;
-            width: 42.91vw;
+        @media (min-width: 650px) {
+            display: initial;
+        }
+
+        @media (min-width: 900px) {
+            left: 10rem;
+        }
+
+        @include desktop {
+            left: 13rem;
+            font-size: 3.6rem;
+            animation: flyin 0.5s 1.8s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
 
         .quote {
             display: inline-block;
+            line-height: 8rem;
             font-family: 'Permanent Marker', cursive;
             transform: rotate(-1.2deg) translate(0.75vw, -0.45vw);
+            margin-right: 1rem;
         }
 
         &::after {
-            border-bottom: 0.18vw solid color(neutral-lightest);
+            border-bottom: 0.1rem solid color(neutral-lightest);
             content: '';
-            left: 15vw;
+            right: 3rem;
             position: absolute;
-            top: 5vw;
-            width: 12vw;
-
-            @include tablet {
-                border-bottom-width: 0.36vw;
-                left: 22vw;
-                top: 8vw;
-                width: 19vw;
-            }
+            top: 6rem;
+            width: 20rem;
         }
     }
 
     .subject-links {
-        left: 18.3vw;
-        letter-spacing: 0.078vw;
+        bottom: 1.5rem;
+        left: 0;
         position: absolute;
-        top: 41.5vw;
+        width: 100%;
         z-index: 3;
 
         @include tablet {
-            left: 7.47vw;
-            top: 67.7vw;
+            width: 27rem;
+            bottom: 6.3rem;
+            left: 5rem;
+        }
+
+        @media (min-width: 650px) {
+            width: auto;
+            left: 2.5rem;
+        }
+
+        @media (min-width: 900px) {
+            left: 11rem;
+        }
+
+        @include desktop {
+            left: 14rem;
+            animation: flyin 0.5s 1.8s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
 
         ul {
             list-style-type: none;
-            margin: 0;
+            margin: 0 1.5rem;
             padding: 0;
+
+            @include tablet {
+                margin: 0;
+            }
+
 
             li {
                 display: inline-block;
+                width: 100%;
+
+                @include tablet {
+                    width: auto;
+                    margin-right: 1rem;
+                }
             }
         }
 
         .btn {
-            font-size: 1.1vw;
-            height: 4.5vw;
-            line-height: 4.5vw;
-            padding: 0;
+            font-size: 1.6rem;
+            line-height: 6rem;
+            height: 6rem;
+            padding: 0 1.5rem;
+            width: 100%;
+            display: inline-block;
 
-            @include tablet {
-                font-size: 1.7vw;
-                height: 6.33vw;
-                line-height: 6.33vw;
+            @include desktop {
+                width: auto;
             }
-        }
-
-        .explore-subject,
-        .explore-all {
-            box-shadow: 0 0 1rem color(neutral-dark);
         }
 
         .explore-subject {
-            margin-right: 0.2vw;
-            width: 17.5vw;
+            margin-bottom: 1.5rem;
 
-            @include tablet {
-                width: 25.32vw;
+            @include phone {
+                background-color: color(turquoise);
+
+                &:hover {
+                    background-color: darken(color(turquoise), 5%);
+                }
             }
         }
 
         .explore-all {
-            width: 18.55vw;
 
-            @include tablet {
-                width: 27.97vw;
+            @include phone {
+                background-color: color(grey);
+
+                &:hover {
+                    background-color: darken(color(grey), 5%);
+                }
             }
         }
     }
