Fix IE11 Higher Ed banner margin

--- a/src/app/pages/higher-ed/higher-ed.scss
+++ b/src/app/pages/higher-ed/higher-ed.scss
@@ -96,7 +96,7 @@ $hero-break-width: 880px;
                 color: color(neutral-lightest);
                 display: flex;
                 justify-content: flex-end;
-                margin: auto 1.5rem;
+                margin: inherit 1.5rem;
                 padding: 4rem;
                 z-index: 1;
 
