Restore callout boxes below Higher Ed banner
Fetch page data from CMS
Build Quotes spec
Note: not fetching images to use

--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -5,13 +5,8 @@
                 <div class="student"></div>
                     <div class="overlay">
                         <div class="text-block">
-                            <h1 class="header">Free textbooks.<br> High quality.<br> No catch.</h1>
-                            <p class="blurb">
-                                Some of the most valuable investments don't have a price tag.
-                                Neither do our textbooks. Our free, high-quality textbooks and
-                                learning technology give students the tools they need to
-                                succeed without having to weigh the cost.
-                            </p>
+                            <h1 class="header" data-id="intro_heading"></h1>
+                            <p class="blurb" data-id="intro_description"></p>
                         </div>
                     </div>
                 </div>
@@ -19,50 +14,38 @@
             <div class="square-2"></div>
         </div>
         <span class="scrolldown-chevron"><a href="#getting-started"><i class="fa fa-chevron-down"></i></a></span>
+        <div class="quote-buckets"></div>
         <div id="getting-started" class="getting-started">
             <div class="container boxed">
-                <div class="header">Getting Started</div>
+                <div class="header" data-id="get_started_heading"></div>
                 <ol class="steps">
                     <li class="numbered step">
-                        <div class="title">Review a Textbook</div>
-                        <div class="blurb">
-                            The entire contents of our free textbooks are
-                            available online. Review a book or chapter and see
-                            the quality for yourself.
-                        </div>
-                        <div class="more"><a href="/subjects">View Books</a></div>
+                        <div class="title" data-id="get_started_step_1_heading"></div>
+                        <div class="blurb" data-id="get_started_step_1_description"></div>
+                        <div class="more"><a href="/subjects" data-id="get_started_step_1_cta"></a></div>
                     </li>
 
                     <li class="numbered step">
-                        <div class="title">Create a Faculty Account</div>
-                        <div class="blurb">
-                            We provide additional free instructor-only resources
-                            like test banks and solution manuals to plan your
-                            course.
-                        </div>
-                        <div class="more"><a href="{{loginLink}}" data-local="true">Create Account</a></div>
+                        <div class="title" data-id="get_started_step_2_heading"></div>
+                        <div class="blurb" data-id="get_started_step_2_description"></div>
+                        <div class="more"><a href="{{loginLink}}" data-local="true"
+                            data-id="get_started_step_2_cta"></a></div>
                     </li>
 
                     <li class="numbered step">
-                        <div class="title">Adopt a Textbook</div>
-                        <div class="blurb">
-                            Access to our textbooks is completely free. Let us
-                            know you've adopted, and share our URL with your
-                            students! You can also recommend a book as an
-                            optional extra resource.
-                        </div>
-                        <div class="more"><a href="/adoption">Adopt</a></div>
+                        <div class="title" data-id="get_started_step_3_heading"></div>
+                        <div class="blurb" data-id="get_started_step_3_description"></div>
+                        <div class="more"><a href="/adoption" data-id="get_started_step_3_cta"></a></div>
                     </li>
                 </ol>
 
                 <div class="step">
-                    <div class="title">Adopt as an Institution</div>
-                    <div class="blurb">
-                        If you are an administrator interested in driving adoptions
-                        of OpenStax textbooks at your institution, we are here to
-                        support you!
+                    <div class="title" data-id="adopt_heading"></div>
+                    <div class="blurb" data-id="adopt_description"></div>
+                    <div class="more">
+                        <a href="/contact?subject=College/University Partnerships" data-id="adopt_cta">
+                        </a>
                     </div>
-                    <div class="more"><a href="/contact?subject=College/University Partnerships">Contact Us</a></div>
                 </div>
             </div>
         </div>
