Restrict institutional email domains
Define email validation test in $
Add custom validation check method to proxy-widget-view
Use custom validation check to call test and set states
Add validation-message to fields that displays when invalid
Modify proxy-widget-view so that it does not have to contain the submit
button

--- a/src/app/pages/finish-profile/faculty-section/faculty-section.hbs
+++ b/src/app/pages/finish-profile/faculty-section/faculty-section.hbs
@@ -8,6 +8,10 @@
         <label>
             <span>Official institutional email address</span>
             <input name="00NU0000005oVQV"  pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+            <div class="validation-message">
+                Please enter your official school/organizational email address
+                to help us verify your position with your school.
+            </div>
         </label>
     </div>
     <div class="col last">
