--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -62,6 +62,10 @@
                 <label>
                     Official institutional email address
                     <input name="00NU0000005oVQV" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                    <div class="validation-message">
+                        Please enter your official school/organizational email address
+                        to help us verify your position with your school.
+                    </div>
                     <small>A verification email will be sent to this address</small>
                 </label>
                 <label>
