Add partners to Salesforce dropdowns
Add eMath and panOpen to dropdown.

--- a/src/app/pages/renewal/renewal.hbs
+++ b/src/app/pages/renewal/renewal.hbs
@@ -87,8 +87,10 @@
                      <option value="None" disabled selected>None</option>
                      <option value="Cerego">Cerego</option>
                      <option value="Courseweaver">Courseweaver</option>
+                     <option value="eMath">eMath</option>
                      <option value="Expert TA">Expert TA</option>
                      <option value="Lrnr">Lrnr</option>
+                     <option value="panOpen">panOpen</option>
                      <option value="Sapling Learning">Sapling Learning</option>
                      <option value="SimBio">SimBio</option>
                      <option value="WebAssign">WebAssign</option>
