--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -90,10 +90,12 @@
                      <option value="Cerego">Cerego</option>
                      <option value="CogBooks">CogBooks</option>
                      <option value="Courseweaver">Courseweaver</option>
+                     <option value="eMath">eMath</option>
                      <option value="Expert TA">Expert TA</option>
                      <option value="Junction">Junction</option>
                      <option value="Lrnr">Lrnr</option>
                      <option value="Lumen">Lumen</option>
+                     <option value="panOpen">panOpen</option>
                      <option value="Sapling Learning">Sapling Learning</option>
                      <option value="SimBio">SimBio</option>
                      <option value="WebAssign">WebAssign</option>
